added inventory management to portfolio

--- a/assets/style.css
+++ b/assets/style.css
@@ -158,8 +158,8 @@ css for images after this section
     background-image: url('./images/portfolio.jpg'); 
 }
 
-.img-horiseon{
-    background-image: url('./images/horiseon.jpg'); 
+.img-invManagement{
+    background-image: url('./images/invmanagement.png'); 
 }
 
 .img-camera{
